# deadline-cloud-test-fixtures

./: .gitignore  CHANGELOG.md  README.md  hatch.toml  pyproject.toml  requirements-testing.txt
.github/workflows/: publish_release.yml  release_publish.yml  reuse_python_build.yml
pipeline/: e2e.sh
scripts/: add_copyright_headers.sh  publish.sh
src/deadline_test_fixtures/: __init__.py  example_config.sh  fixtures.py  job_attachment_manager.py  models.py  pytest_hooks.py  util.py
src/deadline_test_fixtures/cloudformation/: __init__.py  cfn.py  job_attachments_bootstrap_stack.py  util.py  worker_bootstrap_stack.py
src/deadline_test_fixtures/containers/worker/: Dockerfile
src/deadline_test_fixtures/deadline/: __init__.py  client.py  resources.py  stubs.py  worker.py
src/deadline_test_scaffolding/: __init__.py  constants.py  deadline_manager.py  deadline_stub.py  fixtures.py  job_attachment_manager.py  models.py  util.py  utils.py
src/deadline_test_scaffolding/cf_templates/: job_attachments.yaml
src/deadline_test_scaffolding/cloudformation/: __init__.py
src/deadline_test_scaffolding/containers/worker/: run_container.sh
src/deadline_test_scaffolding/deadline/: __init__.py  client.py
test/: test_copyright_headers.py
test/unit/: conftest.py  shared_constants.py  test_deadline_manager.py  test_deadline_shim.py  test_job_attachment_manager.py
test/unit/cloudformation/: test_cfn.py
test/unit/deadline/: test_client.py  test_resources.py  test_worker.py
